--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,9 @@ dependencies:
   flutter_svg: ^0.22.0
   get_storage: ^2.0.2
   json_annotation: ^4.0.1
-  polkawallet_sdk: ^0.2.5
+  polkawallet_sdk:
+    git:
+      url: https://github.com/ashishbeck/sdk.git
   polkawallet_ui:
     git:
       url: https://github.com/ashishbeck/ui.git
